Fix font contrast in dark theme search field

--- a/web/html/src/branding/css/susemanager/susemanager-dark-variables.less
+++ b/web/html/src/branding/css/susemanager/susemanager-dark-variables.less
@@ -3,6 +3,7 @@
 @aside: @eos-bc-gray-1000;
 @aside-menu-text: @eos-bc-gray-50;
 @aside-menu-search-border: @eos-bc-gray-1000;
+@aside-menu-search-text-color: @eos-bc-white;
 
 @footer-text: @eos-bc-gray-100;
 @footer-links: @eos-bc-gray-100;
