--- a/web/html/src/branding/css/susemanager/variables.less
+++ b/web/html/src/branding/css/susemanager/variables.less
@@ -79,6 +79,7 @@
 @aside-menu-search-border:         @eos-bc-gray-100;
 @aside-menu-search-clear:          fade(@eos-bc-gray-300, 60%);
 @aside-menu-search-clear-hover:    @eos-bc-gray-700;
+@aside-menu-search-text-color: @eos-bc-gray-1000;
 
 /* Icons legend */
 @icon-legend:       @header;
